2024-03-05 Se agrega video de scrap.

--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -936,7 +936,17 @@
                                         </li>
                                     }
 
-                                    @*UTILIDADES*@
+                                    @*Videos extras*@
+                                    @if (Request.IsAuthenticated)
+                                    {
+                                        <li class="@(ViewBag.PrimerNivel == "videos" ? "active" : null )">
+                                            <a><i class="fa fa-film"></i> Nuestros procesos <span class="fa fa-chevron-down"></span></a>
+                                            <ul class="nav child_menu" style="@(ViewBag.PrimerNivel == "videos" ? "display:block" : null )">
+                                                <li class="@(ViewBag.SegundoNivel == "generacion_scrap" ? "current-page" : null )"><a href="@Url.Action( "GeneracionScrap", "Videos")">Generación de Scrap</a></li>
+                                            </ul>
+                                        </li>
+                                    }
+                                     @*UTILIDADES*@
                                     @if (Request.IsAuthenticated && User.IsInRole(TipoRoles.UTILIDADES))
                                     {
                                         <li class="@(ViewBag.PrimerNivel == "utilidades" ? "active" : null )">
