2025-03-05 Se cambia video por proceso ptoductivo tkmm.

--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -942,7 +942,7 @@
                                         <li class="@(ViewBag.PrimerNivel == "videos" ? "active" : null )">
                                             <a><i class="fa fa-film"></i> Nuestros procesos <span class="fa fa-chevron-down"></span></a>
                                             <ul class="nav child_menu" style="@(ViewBag.PrimerNivel == "videos" ? "display:block" : null )">
-                                                <li class="@(ViewBag.SegundoNivel == "generacion_scrap" ? "current-page" : null )"><a href="@Url.Action( "GeneracionScrap", "Videos")">Generación de Scrap</a></li>
+                                                <li class="@(ViewBag.SegundoNivel == "generacion_scrap" ? "current-page" : null )"><a href="@Url.Action( "procesoproductivotkmm", "Videos")">Proceso Productivo tkMM</a></li>
                                             </ul>
                                         </li>
                                     }
