--- a/CódigoFuente/BitacorasProduccion/Views/Videos/procesoproductivotkmm.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Videos/procesoproductivotkmm.cshtml
@@ -63,7 +63,7 @@
                     <div class="x_content">
                         <!-- Inicio Contenido -->
                         <div class="video-container">
-                            <div class="video-title">Generación de Scrap</div>
+                            <div class="video-title">Proceso Productivo tkMM</div>
                             <video controls>
                                 <source src="https://portaltkmm.tk-materials.com/recursos/videos/generacion_scrap.mp4" type="video/mp4" />
                                 Tu navegador no soporta la reproducción de videos.
