--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -773,12 +773,17 @@
                                     @*COTIZADOR*@
                                     @if (Request.IsAuthenticated)
                                     {
-                                        <li class="@(ViewBag.PrimerNivel == "quote" ? "active" : null )">
+                                        <li class="@(ViewBag.PrimerNivel == "cotizador" ? "active" : null )">
                                             <a><i class="fa fa-circle-dollar-to-slot"></i> Cotizador <span class="fa fa-chevron-down"></span></a>
                                             <ul class="nav child_menu" style="@(ViewBag.PrimerNivel == "cotizador" ? "display:block" : null )">
                                                 <li class="@(ViewBag.SegundoNivel == "index_quotes" ? "current-page" : null )"><a href="@Url.Action( "index", "CTZ_Projects")">Cotizaciones</a></li>
-                                                <li class="@(ViewBag.SegundoNivel == "index_quotes" ? "current-page" : null )"><a href="@Url.Action( "index", "CTZ_Projects")">Engineering</a></li>
                                                 <li class="@(ViewBag.SegundoNivel == "project_status" ? "current-page" : null )"><a href="@Url.Action( "ProjectStatus", "CTZ_Projects")">Project Status</a></li>
+                                                <li class="link @(ViewBag.SegundoNivel == "ctz_catalogs" ? "active" : "" )">
+                                                    <a>Catalogs<span class="fa fa-chevron-down"></span></a>
+                                                    <ul class="nav child_menu" style="@(ViewBag.SegundoNivel == "ctz_catalogs" ? "display:block" : null )">
+                                                        <li class="@(ViewBag.TercelNivel == "ctz_catalogs_engineering" ? "current-page" : null )"><a href="@Url.Action( "Index", "CTZ_catalogs")">Engineering</a></li>
+                                                    </ul>
+                                                </li>
                                             </ul>
                                         </li>
                                     }
